# screenpick

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  overlays.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  capture.rs  capture_modes.rs  capture_trust.rs  document_store.rs  documents.rs  events.rs  export_validation.rs  lib.rs  main.rs  monitor_pairing.rs  path_utils.rs  picker_session.rs  region.rs  screen_picker.rs  settings.rs  shortcut_config.rs  shortcuts.rs  tray.rs  window_picker.rs
src/lib/: ColorPicker.svelte  EditorStage.component.test.ts  EditorStage.svelte  SettingsPanel.svelte  ToolProperties.svelte  annotationRendering.test.ts  annotationRendering.ts  annotations.test.ts  annotations.ts  bindings.ts  captureOrchestration.svelte.ts  captureOrchestration.test.ts  captureSound.ts  commandResult.ts  diagnosticsLog.ts  documentStore.svelte.test.ts  documentStore.svelte.ts  domUtils.ts  editor.svelte.test.ts  editor.svelte.ts  editorBatchExport.test.ts  editorCommands.ts  editorExport.ts  editorStyles.ts  screenSelectionEvents.ts  shortcutRecording.test.ts  shortcutRecording.ts  versionSync.test.ts  windowPickerCommands.ts
src/routes/: +page.svelte
src/routes/region-selector/: +page.svelte
src/routes/screen-overlay/: +page.svelte
src/routes/screen-picker/: +page.svelte
src/routes/window-selector/: +page.svelte
